# ece428-sp20

mp0/: Cargo.toml
mp0/src/: client.rs  server.rs
mp0_res/: report.md  server_log_1  server_log_1.json  server_log_2  server_log_2.json
mp1_res/: report.md
mp1_res/senario-3/: data-points.json  delay-data.json  graph.py  hash-n-times.json  nodelog-1  nodelog-2  nodelog-3  nodelog-final.json  tcplog-1  tcplog-1.json  tcplog-2  tcplog-2.json  tcplog-3  tcplog-3.json  transform.jq
mp1_res/senario-4/: collision  data-points.json  delay-data.json  graph.py  hash-n-time.json  nodelog  nodelog-1  nodelog-2  nodelog-3  nodelog-4  nodelog-5  nodelog-6  nodelog-7  nodelog-8  tcplog-1  tcplog-1.json  tcplog-2  tcplog-2.json  tcplog-3  tcplog-3.json  tcplog-4  tcplog-4.json  tcplog-5  tcplog-5.json  tcplog-6  tcplog-6.json  tcplog-7  tcplog-7.json  tcplog-8  tcplog-8.json  transform.jq
