[package]
name = "mp0"
version = "0.1.0"
authors = ["Haoqing Zhu <haoqing3@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "logger"
path = "src/server.rs"

[[bin]]
name = "node"
path = "src/client.rs"

[dependencies]
clap = "*"
chrono = "*"
